Animate page transitions
...and some other minor style changes. Also redirect to root in the
event of routing errors, as we don't have an error page, yet.

--- a/waitstaff.css
+++ b/waitstaff.css
@@ -1,3 +1,8 @@
+body,
+html {
+  height: 90%;
+}
+
 body {
   background-color: #293f50;
   font-family: 'Lucida Sans', sans-serif;
@@ -9,6 +14,8 @@ body {
   margin: 2rem auto;
   padding: 2rem 5rem;
   max-width: 60rem;
+  min-width: 46rem;
+  min-height: 100%;
   background-color: #fff;
   color: #000;
 }
@@ -20,7 +27,12 @@ header {
 }
 
 nav {
+  font-size: 120%;
   text-align: center;
+}
+
+nav a {
+  text-decoration: none;
 }
 
 section {
@@ -114,5 +126,40 @@ input[type=button] {
 
 .pull-right {
   float: right;
+}
+
+.animate-view-container {
+  position: relative;
+  min-height: 100%;
+}
+
+.animate-view.ng-enter,
+.animate-view.ng-leave {
+  transition: all 1s;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.animate-view.ng-enter {
+  transition-timing-function: ease-in;
+  opacity: 0;
+  z-index: 100;
+}
+
+.animate-view.ng-enter-active {
+  opacity: 1;
+}
+
+.animate-view.ng-leave {
+  transition-timing-function: ease-out;
+  opacity: 1;
+  z-index: 99;
+}
+
+.animate-view.ng-leave-active {
+  opacity: 0;
 }
 
